Fix horizontal scroll issue in mobile

--- a/src/components/Component.css
+++ b/src/components/Component.css
@@ -98,9 +98,9 @@
 }
 
 .alert-primary-color {
-    margin: 20px;
-    width: 400px;
+    margin: 20px 10px;
     padding: 15px;
+    max-width: 400px;
     border-radius: 5px;
     border: 2px solid gray;
 }
